# pyture-remo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: CODEOWNERS
.github/workflows/: pr-test.yaml  python.yaml
pyture_remo/: __init__.py  api.py  api_test.py  appliance.py  appliance_test.py  base.py  button.py  device.py  light.py  remo.py  remo_test.py  signal.py  tv.py  user.py
pyture_remo/testdata/: appliances.json  devices.json
