[tool.poetry]
name = "pyture-remo"
version = "0.1.0"
description = "nature-remo library for Python"
authors = ["Suzuka Asagiri <admin@suzutan.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
