[tool.poetry]
name = "pyture-remo"
version = "0.2.3"
description = "nature-remo library for Python"
authors = ["Suzuka Asagiri <admin@suzutan.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"
pytest = "^5.4.3"
autopep8 = "^1.5.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
