[tool.poetry]
name = "pyture-remo"
version = "0.2.3"
description = "nature-remo library for Python"
authors = ["suzuka <6679870+suzutan@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.10.0"
pytest = "^7.2.1"
autopep8 = "^2.0.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=0.2"]
build-backend = "poetry.masonry.api"
